styles/components/pra.css
.pra{
    display: flex;
    flex-direction: column;
    margin-top: 7rem;
    margin-bottom: 7rem;
    justify-content: center;
    align-items: center;
    gap: 1em;
}

.pra__main{
    color: var(--clr-blue);
    font-size: var(--size-6xl);
}

.pra__desc{
    color :var(--clr-slate600);
    font-size: var(--clr-l);
    margin-bottom: 2rem;
    font-weight: 500;
}

.pra__img2{
    width: 100rem;
    border-radius: 10px;
}

.pra__img1{
    border-radius: 10px;
}

/* 4xs */
@media (min-width: 280px) {
    .pra__main{
        font-size: var(--size-3xl);
        text-align: center;
    }
    
    .pra__desc{
        font-size: 0.65rem;
    }

    .pra__img1{
        width: 15rem;
    }
    
    .pra__img2{
        width: 20rem;
        float: right;
    }
}

/* 3xs */
@media (min-width: 320px) {
    .pra__main{
        font-size: var(--size-3xl);
        text-align: center;
    }
    
    .pra__desc{
        font-size: var(--size-xs);
    }

    .pra__img1{
        width: 15rem;
    }
    
    .pra__img2{
        width: 20rem;
        float: right;
    }
}

/* xxs */
@media (min-width: 375px) {    
    .pra__main{
        font-size: var(--size-3xl);
        text-align: center;
    }
    
    .pra__desc{
        font-size: var(--size-xs);
    }

    .pra__img1{
        width: 15rem;
    }
    
    .pra__img2{
        width: 20rem;
        float: right;
    }
}

/* xs */
@media (min-width: 475px) {
    .pra{
        display: flex;
        flex-direction: column;
        margin-top: 7rem;
        margin-bottom: 7rem;
        justify-content: center;
        align-items: center;
        gap: 1em;
    }
    
    .pra__main{
        color: var(--clr-blue);
        font-size: var(--size-4xl);
        text-align: center;
    }
    
    .pra__desc{
        color :var(--clr-slate600);
        font-size: var(--size-xs);
        margin-bottom: 2rem;
    }

    .pra__img1{
        width: 20rem;
    }
    
    .pra__img2{
        width: 25rem;
        float: right;
    }
}

/* s */
@media (min-width: 640px) {
    
    .pra__main{
        font-size: var(--size-5xl);
        text-align: center;
    }
    
    .pra__desc{
        font-size: var(--size-xs);
    }

    .pra__img1{
        width: 40%
    }
    
    .pra__img2{
        aspect-ratio: 16/9;
        width: 70%;
        float: right;
    }
}

/* m */
@media (min-width: 768px) {
    
    .pra__main{
        font-size: var(--size-5xl);
    }
    
    .pra__desc{
        font-size: var(--size-s);
    }

    .pra__img1{
        width: 40%
    }
    
    .pra__img2{
        aspect-ratio: 16/9;
        width: 70%;
        float: right;
    }
}

/* l */
@media (min-width: 1024px) {
}

/* xl */
@media (min-width: 1280px) {
}

/* xxl */
@media (min-width: 1536px) {
}

